add services page

--- a/sesrvices.html
+++ b/sesrvices.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
     <header>
@@ -80,13 +82,47 @@
         <div class="col">
           <div
             class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
-            style="background-image: url('img/features/2.jpg')"
+            style="background-image: url('img/features/1.jpg')"
           >
             <div
               class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1"
             >
+              <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Ux/Ui</h2>
+              <ul class="d-flex list-unstyled mt-auto">
+                <li class="me-auto">
+                  <img
+                    src="https://github.com/twbs.png"
+                    alt="Bootstrap"
+                    width="32"
+                    height="32"
+                    class="rounded-circle border border-white"
+                  />
+                </li>
+                <li class="d-flex align-items-center me-3">
+                  <svg class="bi me-2" width="1em" height="1em">
+                    <use xlink:href="#geo-fill" />
+                  </svg>
+                  <small>H2O</small>
+                </li>
+                <li class="d-flex align-items-center">
+                  <svg class="bi me-2" width="1em" height="1em">
+                    <use xlink:href="#calendar3" />
+                  </svg>
+                  <small>4d</small>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div
+            class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
+            style="background-image: url('img/features/3.jpg')"
+          >
+            <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
               <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">
-                Short title, long jacket
+                Mobile development
               </h2>
               <ul class="d-flex list-unstyled mt-auto">
                 <li class="me-auto">
@@ -102,7 +138,79 @@
                   <svg class="bi me-2" width="1em" height="1em">
                     <use xlink:href="#geo-fill" />
                   </svg>
-                  <small>Earth</small>
+                  <small>ABC</small>
+                </li>
+                <li class="d-flex align-items-center">
+                  <svg class="bi me-2" width="1em" height="1em">
+                    <use xlink:href="#calendar3" />
+                  </svg>
+                  <small>5d</small>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div
+            class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
+            style="background-image: url('img/features/2.jpg')"
+          >
+            <div
+              class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1"
+            >
+              <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Web design</h2>
+              <ul class="d-flex list-unstyled mt-auto">
+                <li class="me-auto">
+                  <img
+                    src="https://github.com/twbs.png"
+                    alt="Bootstrap"
+                    width="32"
+                    height="32"
+                    class="rounded-circle border border-white"
+                  />
+                </li>
+                <li class="d-flex align-items-center me-3">
+                  <svg class="bi me-2" width="1em" height="1em">
+                    <use xlink:href="#geo-fill" />
+                  </svg>
+                  <small>123 company</small>
+                </li>
+                <li class="d-flex align-items-center">
+                  <svg class="bi me-2" width="1em" height="1em">
+                    <use xlink:href="#calendar3" />
+                  </svg>
+                  <small>3d</small>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div
+            class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
+            style="background-image: url('img/features/2.jpg')"
+          >
+            <div
+              class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1"
+            >
+              <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Web design</h2>
+              <ul class="d-flex list-unstyled mt-auto">
+                <li class="me-auto">
+                  <img
+                    src="https://github.com/twbs.png"
+                    alt="Bootstrap"
+                    width="32"
+                    height="32"
+                    class="rounded-circle border border-white"
+                  />
+                </li>
+                <li class="d-flex align-items-center me-3">
+                  <svg class="bi me-2" width="1em" height="1em">
+                    <use xlink:href="#geo-fill" />
+                  </svg>
+                  <small>123 company</small>
                 </li>
                 <li class="d-flex align-items-center">
                   <svg class="bi me-2" width="1em" height="1em">
@@ -123,9 +231,7 @@
             <div
               class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1"
             >
-              <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">
-                Much longer title that wraps to multiple lines
-              </h2>
+              <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Ux/Ui</h2>
               <ul class="d-flex list-unstyled mt-auto">
                 <li class="me-auto">
                   <img
@@ -140,7 +246,7 @@
                   <svg class="bi me-2" width="1em" height="1em">
                     <use xlink:href="#geo-fill" />
                   </svg>
-                  <small>Pakistan</small>
+                  <small>H2O</small>
                 </li>
                 <li class="d-flex align-items-center">
                   <svg class="bi me-2" width="1em" height="1em">
@@ -160,7 +266,7 @@
           >
             <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
               <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">
-                Another longer title belongs here
+                Mobile development
               </h2>
               <ul class="d-flex list-unstyled mt-auto">
                 <li class="me-auto">
@@ -176,7 +282,7 @@
                   <svg class="bi me-2" width="1em" height="1em">
                     <use xlink:href="#geo-fill" />
                   </svg>
-                  <small>California</small>
+                  <small>ABC</small>
                 </li>
                 <li class="d-flex align-items-center">
                   <svg class="bi me-2" width="1em" height="1em">
