add newletter section

--- a/index.html
+++ b/index.html
@@ -150,11 +150,10 @@
       </button>
     </div>
 
-    <!-- cards -->
-
+    <!-- last job section-->
     <div class="album py-5 bg-light">
-      <div class="container"> 
-      <h2 class="pb-2 mb-4">Lasters Jobs</h2>
+      <div class="container">
+        <h2 class="pb-2 mb-4">Last Jobs</h2>
 
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div class="col">
@@ -420,7 +419,20 @@
       </div>
     </div>
 
-   
+    <!-- subscription to our email -->
+    <form action="" class="container py-4">
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label"
+          >Subscribe to our newsletter</label
+        >
+        <input
+          type="email"
+          class="form-control"
+          id="exampleFormControlInput1"
+          placeholder="name@example.com"
+        />
+      </div>
+    </form>
 
     <!-- footer -->
     <footer class="bg-light text-dark py-3">
