--- a/sesrvices.html
+++ b/sesrvices.html
@@ -10,10 +10,11 @@
   </head>
 
   <body>
-    <header>
+    <header class="sticky-top">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-          <a class="navbar-brand" href="#">Job finder</a>
+          <a class="navbar-brand" href="index.html">Job finder</a>
+
           <button
             class="navbar-toggler"
             type="button"
@@ -25,10 +26,16 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+          <div
+            class="collapse navbar-collapse"
+            id="navbarSupportedContent"
+          >
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                <a class="nav-link" aria-current="page" href="index.html"
+                  >Home</a
+                >
               </li>
 
               <li class="nav-item">
@@ -36,7 +43,7 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="#">Our services</a>
+                <a class="nav-link" href="sesrvices.html">Our services</a>
               </li>
 
               <li class="nav-item">
@@ -48,24 +55,17 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Contact us</a>
               </li>
+            </ul>
+
+            <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
+                <a class="nav-link" href="login.html">Login</a>
               </li>
+
               <li class="nav-item">
-                <a class="nav-link" href="#">Signup</a>
+                <a class="nav-link" href="signup.html">Signup</a>
               </li>
             </ul>
-            <form class="d-flex">
-              <input
-                class="form-control me-2"
-                type="search"
-                placeholder="Search"
-                aria-label="Search"
-              />
-              <button class="btn btn-outline-success" type="button">
-                Search
-              </button>
-            </form>
           </div>
         </div>
       </nav>
@@ -293,8 +293,20 @@
   <p class="text-center mb-0">All copyright save for N.S</p>
 </footer>
 
+<script src="js/jquery.min.js"></script>
+<script src="js/popper.js"></script>
 <script src="js/bootstrap.min.js"></script>
 
-</body>
-</html>
+<!-- nav bar script -->
+<script>
 
+  $('.nav-item').on('click', (e) => {
+    console.log('click');
+
+    e.target.classList.add('active')
+  })
+</script>
+
+</body>
+
+</html>
