--- a/signup.html
+++ b/signup.html
@@ -10,10 +10,11 @@
   </head>
 
   <body>
-    <header>
+    <header class="sticky-top">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-          <a class="navbar-brand" href="#">Job finder</a>
+          <a class="navbar-brand" href="index.html">Job finder</a>
+
           <button
             class="navbar-toggler"
             type="button"
@@ -25,10 +26,16 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+          <div
+            class="collapse navbar-collapse"
+            id="navbarSupportedContent"
+          >
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                <a class="nav-link" aria-current="page" href="index.html"
+                  >Home</a
+                >
               </li>
 
               <li class="nav-item">
@@ -36,7 +43,7 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="#">Our services</a>
+                <a class="nav-link" href="sesrvices.html">Our services</a>
               </li>
 
               <li class="nav-item">
@@ -48,24 +55,17 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Contact us</a>
               </li>
+            </ul>
+
+            <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
+                <a class="nav-link" href="login.html">Login</a>
               </li>
+
               <li class="nav-item">
-                <a class="nav-link" href="#">Signup</a>
+                <a class="nav-link" href="signup.html">Signup</a>
               </li>
             </ul>
-            <form class="d-flex">
-              <input
-                class="form-control me-2"
-                type="search"
-                placeholder="Search"
-                aria-label="Search"
-              />
-              <button class="btn btn-outline-success" type="button">
-                Search
-              </button>
-            </form>
           </div>
         </div>
       </nav>
@@ -74,59 +74,75 @@
 </html>
 
 
-<h2 class="text-center mt-4 mb-0">Signup</h2>
+<div class="container">
+  <h2 class="text-center mt-4 mb-0">Signup</h2>
 
-<form action="" class="container mt-3 py-3">
-  <div class="row">
-    <div class="col-md-6 mx-auto">
-      <div class="mb-3">
-        <label for="formGroupExampleInput" class="form-label"> Name </label>
-        <input type="text" class="form-control" id="formGroupExampleInput" />
-      </div>
+  <form action="" class="mt-3 py-3">
+    <div class="row">
+      <div class="col-md-6 mx-auto">
+        <div class="mb-3">
+          <label for="formGroupExampleInput" class="form-label"> Name </label>
+          <input type="text" class="form-control" id="formGroupExampleInput" />
+        </div>
 
-      <div class="mb-3">
-        <label for="formGroupExampleInputEmial" class="form-label">
-          Email
-        </label>
-        <input
-          type="text"
-          class="form-control"
-          id="formGroupExampleInputEmial"
-        />
-      </div>
+        <div class="mb-3">
+          <label for="formGroupExampleInputEmial" class="form-label">
+            Email
+          </label>
+          <input
+            type="text"
+            class="form-control"
+            id="formGroupExampleInputEmial"
+          />
+        </div>
 
-      <div class="mb-3">
-        <label for="formGroupExampleInputUsername" class="form-label">
-          Username
-        </label>
-        <input
-          type="text"
-          class="form-control"
-          id="formGroupExampleInputUsername"
-        />
-      </div>
+        <div class="mb-3">
+          <label for="formGroupExampleInputUsername" class="form-label">
+            Username
+          </label>
+          <input
+            type="text"
+            class="form-control"
+            id="formGroupExampleInputUsername"
+          />
+        </div>
 
-      <div class="mb-3">
-        <label for="formGroupExampleInput2" class="form-label">Password</label>
-        <input
-          type="password"
-          class="form-control"
-          id="formGroupExampleInput2"
-        />
-      </div>
-      <div class="mb-3">
-        <button class="btn btn-primary w-100 mt-3">Signup</button>
+        <div class="mb-3">
+          <label for="formGroupExampleInput2" class="form-label"
+            >Password</label
+          >
+          <input
+            type="password"
+            class="form-control"
+            id="formGroupExampleInput2"
+          />
+        </div>
+        <div class="mb-3">
+          <button class="btn btn-primary w-100 mt-3">Signup</button>
+        </div>
       </div>
     </div>
-  </div>
-</form>
+  </form>
+</div>
 
 <footer class="bg-light text-dark py-3">
   <p class="text-center mb-0">All copyright save for N.S</p>
 </footer>
 
+<script src="js/jquery.min.js"></script>
+<script src="js/popper.js"></script>
 <script src="js/bootstrap.min.js"></script>
 
-</body>
-</html>
+<!-- nav bar script -->
+<script>
 
+  $('.nav-item').on('click', (e) => {
+    console.log('click');
+
+    e.target.classList.add('active')
+  })
+</script>
+
+</body>
+
+</html>
