--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Job finder</title>
+    <title>JoJO Job finder</title>
 
     <!------------------- head style ------------------->
     <link rel="stylesheet" href="assets/css/solid.min.css" />
@@ -19,7 +19,7 @@
     <header class="sticky-top">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-          <a class="navbar-brand" href="index.html">Job finder</a>
+          <a class="navbar-brand" href="#">JoJo</a>
 
           <button
             class="navbar-toggler"
@@ -46,17 +46,23 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="templates/sesrvices.html">Our services</a>
+                <a class="nav-link" href="templates/sesrvices.html"
+                  >Our services</a
+                >
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="#">Companies</a>
+                <a class="nav-link" href="templates/companies.html"
+                  >Companies</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="templates/about.html">About us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact us</a>
+                <a class="nav-link" href="templates/contact-us.html"
+                  >Contact us</a
+                >
               </li>
             </ul>
 
@@ -69,6 +75,44 @@
                 <a class="nav-link" href="templates/signup.html">Signup</a>
               </li>
             </ul>
+
+            <div class="px-3 d-none d-lg-block">
+              <div class="dropdown">
+                <a
+                  class="btn dropdown-toggle p-0"
+                  href="#"
+                  role="button"
+                  id="dropdownMenuLink"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  <img
+                    class="nav-avatar-img rounded-circle"
+                    src="assets/images/avatar.jpg"
+                    alt=""
+                  />
+                </a>
+
+                <ul
+                  class="dropdown-menu p-4 rounded-4"
+                  aria-labelledby="dropdownMenuLink"
+                >
+                  <li>
+                    <a
+                      class="dropdown-item"
+                      href="templates/dashboard/user-info.html"
+                    >
+                      Dashboard
+                    </a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="templates/profile.html"
+                      >Profile</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </nav>
@@ -76,13 +120,13 @@
     <!------------------- end header section ------------------->
 
     <!-- hero section -->
-    <section class="hero bg-primary py-lg-5">
+    <section class="hero bg-primary">
       <div
         id="carouselExampleCaptions"
         class="carousel slide bg py-lg-5 py-4"
         data-bs-ride="carousel"
       >
-        <div class="container-lg">
+        <div class="container">
           <div class="carousel-indicators">
             <button
               type="button"
@@ -108,7 +152,7 @@
             ></button>
           </div>
 
-          <div class="carousel-inner">
+          <div class="carousel-inner px-3">
             <!-- item 1 -->
             <div class="carousel-item active" data-bs-interval="5000">
               <div class="row">
@@ -117,9 +161,9 @@
                 >
                   <div class="w-lg-75 w-md-75 p-lg-4 p-md-4 text-center">
                     <h1
-                      class="mt-3 mt-md-0 text-light fs-1 text-uppercase fw-bold"
+                      class="mt-3 mt-md-0 text-light fs-2 text-uppercase fw-bold"
                     >
-                      High Good jobs for you
+                      Fast and Good job finder site
                     </h1>
                     <p class="text-white-50">
                       Lorem, ipsum dolor sit amet consectetur adipisicing elit.
@@ -128,13 +172,16 @@
                   </div>
                 </div>
                 <div
-                  class="d-block col-12 col-lg-5 col-md-5 col-sm-5 order-1 order-sm-2"
+                  class="d-flex justify-content-center col-12 col-lg-5 col-md-5 col-sm-5 order-1 order-sm-2"
                 >
-                  <img
-                    class="img-fluid"
-                    src="assets/images/slider/1.jpg"
-                    alt="slider image"
-                  />
+                  <lottie-player
+                    src="https://assets10.lottiefiles.com/packages/lf20_5zh17nif.json"
+                    background="transparent"
+                    speed="1"
+                    style="width: 300px; height: 300px"
+                    loop
+                    autoplay
+                  ></lottie-player>
                 </div>
               </div>
             </div>
@@ -147,9 +194,9 @@
                 >
                   <div class="w-lg-75 w-md-75 p-lg-4 p-md-4 text-center">
                     <h1
-                      class="mt-3 mt-md-0 text-light fs-1 text-uppercase fw-bold"
+                      class="mt-3 mt-md-0 text-light fs-2 text-uppercase fw-bold"
                     >
-                      High Good jobs for you
+                      Best for small and large company
                     </h1>
                     <p class="text-white-50">
                       Lorem, ipsum dolor sit amet consectetur adipisicing elit.
@@ -158,13 +205,16 @@
                   </div>
                 </div>
                 <div
-                  class="d-block col-12 col-lg-5 col-md-5 col-sm-5 order-1 order-sm-2"
+                  class="d-flex justify-content-center col-12 col-lg-5 col-md-5 col-sm-5 order-1 order-sm-2"
                 >
-                  <img
-                    class="img-fluid"
-                    src="assets/images/slider/2.jpg"
-                    alt="slider image"
-                  />
+                  <lottie-player
+                    src="https://assets4.lottiefiles.com/packages/lf20_muiaursk.json"
+                    background="transparent"
+                    speed="1"
+                    style="width: 300px; height: 300px"
+                    loop
+                    autoplay
+                  ></lottie-player>
                 </div>
               </div>
             </div>
@@ -177,9 +227,9 @@
                 >
                   <div class="w-lg-75 w-md-75 p-lg-4 p-md-4 text-center">
                     <h1
-                      class="mt-3 mt-md-0 text-light fs-1 text-uppercase fw-bold"
+                      class="mt-3 mt-md-0 text-light fs-2 text-uppercase fw-bold"
                     >
-                      High Good jobs for you
+                      Analyise data
                     </h1>
                     <p class="text-white-50">
                       Lorem, ipsum dolor sit amet consectetur adipisicing elit.
@@ -188,13 +238,16 @@
                   </div>
                 </div>
                 <div
-                  class="d-block col-12 col-lg-5 col-md-5 col-sm-5 order-1 order-sm-2"
+                  class="d-flex justify-content-center col-12 col-lg-5 col-md-5 col-sm-5 order-1 order-sm-2"
                 >
-                  <img
-                    class="img-fluid"
-                    src="assets/images/slider/3.jpg"
-                    alt="slider image"
-                  />
+                  <lottie-player
+                    src="https://assets8.lottiefiles.com/private_files/lf30_rysgr4xj.json"
+                    background="transparent"
+                    speed="1"
+                    style="width: 300px; height: 300px"
+                    loop
+                    autoplay
+                  ></lottie-player>
                 </div>
               </div>
             </div>
@@ -230,13 +283,13 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div class="col">
             <div class="card shadow-sm">
-              <img
-                class="card-img-top"
-                src="assets/images/last-jobs/1.png"
-                alt=""
-              />
-
-              <title>Placeholder</title>
+              <div>
+                <img
+                  class="card-img-top"
+                  src="assets/images/last-jobs/1.png"
+                  alt=""
+                />
+              </div>
 
               <div class="card-body">
                 <p class="card-text">
@@ -245,14 +298,6 @@
                   longer.
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <button
-                      type="button"
-                      class="btn btn-sm btn-outline-secondary"
-                    >
-                      View
-                    </button>
-                  </div>
                   <small class="text-muted">9 mins</small>
                 </div>
               </div>
@@ -261,13 +306,13 @@
 
           <div class="col">
             <div class="card shadow-sm">
-              <img
-                class="card-img-top"
-                src="assets/images/last-jobs/1.png"
-                alt=""
-              />
-
-              <title>Placeholder</title>
+              <div>
+                <img
+                  class="card-img-top"
+                  src="assets/images/last-jobs/2.png"
+                  alt=""
+                />
+              </div>
 
               <div class="card-body">
                 <p class="card-text">
@@ -275,28 +320,21 @@
                   lead-in to additional content. This content is a little bit
                   longer.
                 </p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <button
-                      type="button"
-                      class="btn btn-sm btn-outline-secondary"
-                    >
-                      View
-                    </button>
-                  </div>
-                  <small class="text-muted">9 mins</small>
+                <div class="d-flex justify-content-end align-items-center">
+                  <small class="text-muted">7 mins</small>
                 </div>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <img
-                src="assets/images/last-jobs/2.png"
-                class="card-img-top"
-                alt=""
-              />
-              <title>Placeholder</title>
+              <div>
+                <img
+                  class="card-img-top"
+                  src="assets/images/last-jobs/3.png"
+                  alt=""
+                />
+              </div>
 
               <div class="card-body">
                 <p class="card-text">
@@ -305,15 +343,7 @@
                   longer.
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <button
-                      type="button"
-                      class="btn btn-sm btn-outline-secondary"
-                    >
-                      View
-                    </button>
-                  </div>
-                  <small class="text-muted">9 mins</small>
+                  <small class="text-muted">4 mins</small>
                 </div>
               </div>
             </div>
@@ -321,12 +351,13 @@
 
           <div class="col">
             <div class="card shadow-sm">
-              <img
-                src="assets/images/last-jobs/2.png"
-                class="card-img-top"
-                alt=""
-              />
-              <title>Placeholder</title>
+              <div>
+                <img
+                  class="card-img-top"
+                  src="assets/images/last-jobs/4.png"
+                  alt=""
+                />
+              </div>
 
               <div class="card-body">
                 <p class="card-text">
@@ -335,14 +366,28 @@
                   longer.
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <button
-                      type="button"
-                      class="btn btn-sm btn-outline-secondary"
-                    >
-                      View
-                    </button>
-                  </div>
+                  <small class="text-muted">25 mins</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-sm">
+              <div>
+                <img
+                  class="card-img-top"
+                  src="assets/images/last-jobs/5.png"
+                  alt=""
+                />
+              </div>
+
+              <div class="card-body">
+                <p class="card-text">
+                  This is a wider card with supporting text below as a natural
+                  lead-in to additional content. This content is a little bit
+                  longer.
+                </p>
+                <div class="d-flex justify-content-between align-items-center">
                   <small class="text-muted">9 mins</small>
                 </div>
               </div>
@@ -350,41 +395,13 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <img
-                src="assets/images/last-jobs/2.png"
-                class="card-img-top"
-                alt=""
-              />
-              <title>Placeholder</title>
-
-              <div class="card-body">
-                <p class="card-text">
-                  This is a wider card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit
-                  longer.
-                </p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <button
-                      type="button"
-                      class="btn btn-sm btn-outline-secondary"
-                    >
-                      View
-                    </button>
-                  </div>
-                  <small class="text-muted">9 mins</small>
-                </div>
+              <div>
+                <img
+                  class="card-img-top"
+                  src="assets/images/last-jobs/6.png"
+                  alt=""
+                />
               </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card shadow-sm">
-              <img
-                src="assets/images/last-jobs/2.png"
-                class="card-img-top"
-                alt=""
-              />
-              <title>Placeholder</title>
 
               <div class="card-body">
                 <p class="card-text">
@@ -393,15 +410,7 @@
                   longer.
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <button
-                      type="button"
-                      class="btn btn-sm btn-outline-secondary"
-                    >
-                      View
-                    </button>
-                  </div>
-                  <small class="text-muted">9 mins</small>
+                  <small class="text-muted">16 mins</small>
                 </div>
               </div>
             </div>
@@ -411,21 +420,66 @@
     </div>
 
     <!-- ads section -->
-    <div class="py-5 container">
-      <h2>Last Ads</h2>
+    <div class="ads py-5 container">
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-6 col-12 mb-3">
           <img src="assets/images/ads/1.jpg" alt="" class="img-fluid" />
         </div>
         <div class="col-lg-6 col-md-6 col-sm-6 col-12 mb-3">
-          <img src="assets/images/ads/1.jpg" alt="" class="img-fluid" />
+          <img src="assets/images/ads/2.jpg" alt="" class="img-fluid" />
+        </div>
+      </div>
+    </div>
+
+    <!-- Partners section  -->
+    <div>
+      <div class="container">
+        <h2 class="text-primary">Our Partners</h2>
+
+        <div class="row align-items-center py-4">
+          <div class="col">
+            <img
+              class="img-fluid partner-logo"
+              src="assets/images/partners/apple.svg"
+              alt="partners logo"
+            />
+          </div>
+          <div class="col">
+            <img
+              class="img-fluid partner-logo"
+              src="assets/images/partners/behance.svg"
+              alt="partners logo"
+            />
+          </div>
+
+          <div class="col">
+            <img
+              class="img-fluid partner-logo"
+              src="assets/images/partners/facebook.svg"
+              alt="partners logo"
+            />
+          </div>
+          <div class="col">
+            <img
+              class="img-fluid partner-logo"
+              src="assets/images/partners/microsoft.svg"
+              alt="partners logo"
+            />
+          </div>
+          <div class="col">
+            <img
+              class="img-fluid partner-logo"
+              src="assets/images/partners/pizza.svg"
+              alt="partners logo"
+            />
+          </div>
         </div>
       </div>
     </div>
 
     <!-- subscription to our email -->
-    <form action="" class="container py-4">
-      <div class="mb-3">
+    <form action="" class="bg-light">
+      <div class="mb-3 container py-5">
         <label for="exampleFormControlInput1" class="form-label"
           >Subscribe to our newsletter</label
         >
@@ -446,7 +500,7 @@
     </form>
 
     <!------------------- start footer section ------------------->
-    <footer class="bg-light text-dark py-3">
+    <footer class="bg-primary text-light py-3">
       <p class="text-center mb-0">All copyright save for N.S</p>
     </footer>
     <!------------------- end footer section ------------------->
@@ -457,5 +511,7 @@
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/script.js"></script>
     <!------------------- body script ------------------->
+
+    <script src="assets/js/lottiefiles.js"></script>
   </body>
 </html>
